[package]
name = "vulkano-start"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22"
winit = "0.24"
vulkano = "0.22"
vulkano-win = "0.22"
vulkano-shaders = "0.22"

log = "*"
env_logger = "*"
dotenv = "*"
